chore: postgameplay effect execute and set effect properties

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.WidgetControllerParams.APlayerState",NewName="/Script/Aura.WidgetControllerParams.PlayerState")
++PropertyRedirects=(OldName="/Script/Aura.EffectProperties.SouceAvatarActor",NewName="/Script/Aura.EffectProperties.SourceAvatarActor")
